--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <span>09h-12h</span>
           </header>
           <ul id="period-morning" class="period">
-            <!-- Exemplo  -->
+            <!-- Exemplo  
             <li>
               <strong>11:00</strong>
               <span>Rodrigo Gonçalves</span>
@@ -75,6 +75,7 @@
                 class="cancel-icon"
               />
             </li>
+            -->
           </ul>
         </section>
 
@@ -85,7 +86,7 @@
             <span>13h-18h</span>
           </header>
           <ul id="period-afternoon" class="period">
-            <!-- Exemplo -->
+            <!-- Exemplo 
             <li>
               <strong>14:00</strong>
               <span>Rodrigo Gonçalves</span>
@@ -95,6 +96,7 @@
                 class="cancel-icon"
               />
             </li>
+            -->
           </ul>
         </section>
 
@@ -105,7 +107,7 @@
             <span>19h-21h</span>
           </header>
           <ul id="period-night" class="period">
-            <!-- Exemplo -->
+            <!-- Exemplo 
             <li>
               <strong>19:00</strong>
               <span>Rodrigo Gonçalves</span>
@@ -115,6 +117,7 @@
                 class="cancel-icon"
               />
             </li>
+            -->
           </ul>
         </section>
       </aside>
